syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.jonnyzzz.grpc.generated";




service ServiceA {
    rpc call(StringMessage) returns (StringMessage) {}
}

service ServiceB {
    rpc call(StringMessage) returns (StringMessage) {}
}

service ServiceC {
    rpc call(StringMessage) returns (StringMessage) {}
}

message StringMessage {
    string text = 1;
}
